--- a/ingress.yml
+++ b/ingress.yml
@@ -4,12 +4,22 @@ metadata:
   name: ingress
   namespace: default
   annotations:
+  alb.ingress.kubernetes.io/load-balancer-name: my-alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     #    kubernetes.io/ingress.class: nginx - Not needed when ingressClassName is used below
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTPS": 80}]'
+    alb.ingress.kubernetes.io/ssl-redirect: "443"
+    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
+    alb.ingress.kubernetes.io/backend-protocol: HTTPS
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<region>:<account>:certificate/<GUID>
+    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
+    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
+    alb.ingress.kubernetes.io/auth-session-cookie: kyberlife
+    alb.ingress.kubernetes.io/auth-session-timeout: "3600"
+    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    #nginx.ingress.kubernetes.io/rewrite-target: /$2
+    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
   #    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   #    nginx.ingress.kubernetes.io/app-root: /
   #    nginx.ingress.kubernetes.io/affinity: "cookie"
