--- a/aws-lb-controller.yml
+++ b/aws-lb-controller.yml
@@ -477,15 +477,6 @@ status:
   conditions: []
   storedVersions: []
 ---
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  labels:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/name: aws-load-balancer-controller
-  name: aws-load-balancer-controller
-  namespace: kube-system
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -673,7 +664,7 @@ roleRef:
   name: aws-load-balancer-controller-leader-election-role
 subjects:
   - kind: ServiceAccount
-    name: aws-load-balancer-controller
+    name: aws-alb-sa
     namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -688,7 +679,7 @@ roleRef:
   name: aws-load-balancer-controller-role
 subjects:
   - kind: ServiceAccount
-    name: aws-load-balancer-controller
+    name: aws-alb-sa
     namespace: kube-system
 ---
 apiVersion: v1
@@ -715,7 +706,7 @@ metadata:
   name: aws-load-balancer-controller
   namespace: kube-system
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app.kubernetes.io/component: controller
@@ -728,9 +719,9 @@ spec:
     spec:
       containers:
         - args:
-            - --cluster-name=your-cluster-name
+            - --cluster-name=<clustername>
             - --ingress-class=alb
-            - --aws-vpc-id=vpc-deafbeef
+            - --aws-vpc-id=vpc-<VPCID>
             - --aws-region=ap-southeast-1
           image: amazon/aws-alb-ingress-controller:v2.4.5
           livenessProbe:
@@ -764,7 +755,7 @@ spec:
       priorityClassName: system-cluster-critical
       securityContext:
         fsGroup: 1337
-      serviceAccountName: aws-load-balancer-controller
+      serviceAccountName: aws-alb-sa
       terminationGracePeriodSeconds: 10
       volumes:
         - name: cert
