--- a/sc-efs.yml
+++ b/sc-efs.yml
@@ -3,10 +3,11 @@ apiVersion: storage.k8s.io/v1
 metadata:
   name: efs-sc
 provisioner: efs.csi.aws.com
+reclaimPolicy: Retain
 parameters:
   provisioningMode: efs-ap
   fileSystemId: fs-003de9e8c4b76af95 # aws efs describe-file-systems --query "FileSystems[*].FileSystemId" --output text
-  directoryPerms: "700"
+  directoryPerms: "755"
   gidRangeStart: "1000" # optional
   gidRangeEnd: "2000" # optional
   basePath: "/dynamic_provisioning" # optional
