--- a/pgadmin.yml
+++ b/pgadmin.yml
@@ -61,6 +61,8 @@ spec:
               containerPort: 443
               protocol: TCP
           volumeMounts:
+            - name: pgadmin-data
+              mountPath: /var/lib/pgadmin
             - name: pgadmin-secret
               mountPath: /pgadmin4/servers.json
               subPath: servers.json
@@ -73,9 +75,10 @@ spec:
               mountPath: /certs/server.cert
               subPath: server.cert
               readOnly: true
-            - name: pgadmin-data
-              mountPath: /var/lib/pgadmin
       volumes:
+        - name: pgadmin-data
+          persistentVolumeClaim:
+            claimName: pvc-pgadmin
         - name: pgadmin-secret
           secret:
             secretName: pgadmin-secret
@@ -94,12 +97,3 @@ spec:
             items:
               - key: server.key
                 path: server.key
-
-  volumeClaimTemplates:
-    - metadata:
-        name: pgadmin-data
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: 5Gi
