Move backend protocol version annotation from ingress to individual Service(s)

--- a/ingress.yml
+++ b/ingress.yml
@@ -13,7 +13,7 @@ metadata:
     alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
     alb.ingress.kubernetes.io/backend-protocol: HTTPS
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<region>:<account>:certificate/<GUID>
-    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
+    #alb.ingress.kubernetes.io/backend-protocol-version: HTTP2 Use this in individual Service
     alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
     alb.ingress.kubernetes.io/auth-session-cookie: kyberlife
     alb.ingress.kubernetes.io/auth-session-timeout: "3600"
